--- a/CMSC191Project/app/src/main/res/values/strings.xml
+++ b/CMSC191Project/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">4 Pics 1 Word UPLB Edition</string>
     <string name="play_label">PLAY</string>
+
+    <string name="title_activity_game">GameActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
